tests/fixtures/syntax/valid/comment_after_single_line_assertion_block.repor
case "comment after single line assertion block" {
  $ true
  assert { exit 0 } // trailing comment after the single-line assertion block
}
