tests/fixtures/syntax/invalid/write_step_dot_segment_path.repor
case "write step dot segment path is rejected" {
  write <"../a.txt"> ```
    x
    ```
  $ true
  assert {
    exit 0
  }
}
